# patchhive-product-starter

./: README.md
scaffold/: .env.example  .gitignore  README.md  docker-compose.yml
scaffold/.github/workflows/: ci.yml
scaffold/backend/: Cargo.toml  Dockerfile
scaffold/backend/src/: auth.rs  db.rs  main.rs  startup.rs
scaffold/frontend/: index.html  package.json
scaffold/frontend/src/: App.jsx  config.js
scaffold/frontend/src/panels/: ChecksPanel.jsx  OverviewPanel.jsx
