[package]
name = "__PRODUCT_SLUG__"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "__PRODUCT_SLUG__"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
patchhive-product-core = { git = "https://github.com/patchhive/patchhive-product-core.git", rev = "67cbd85292d91338e799b967db7a98ee15872e29", version = "0.1.0" }
